--- a/main.css
+++ b/main.css
@@ -1,22 +1,196 @@
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
-
 html {
   font-size: 62.5%;
 }
 
 body {
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 1.6rem;
+  box-sizing: border-box;
+  color: #333333;
+}
+
+.error {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-style: italic;
+  padding: 1rem;
+  font-size: 1.2rem;
+  font-weight: 300;
 }
 
 .header {
-  height: 4rem;
+  height: 10rem;
   width: 100%;
-  font-size: 3rem;
+  font-size: 1.6rem;
   font-weight: bold;
   color: white;
-  background: black;
+  background: #364051;
+  display: flex;
+  align-items: center;
+}
+
+.header > h1 {
+  padding-left: 0.5rem;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 3rem;
+}
+
+.form-container .form {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+}
+
+/* button */
+.button,
+.button--return {
+  background: #1c88bf;
+  color: white;
+  padding: 2rem;
+  border: none;
+  font-weight: 300;
+  font-size: 2.8rem;
+  display: inline-block;
+  text-decoration: none;
+  line-height: 1;
+  cursor: pointer;
+  transition: all 0.2s ease-in;
+}
+.button:hover {
+  background: #de17e8;
+  font-weight: 400;
+  transform: translateY(-6px);
+  box-shadow: 0px 6px 6px #777;
+}
+.button:active {
+  transform: translateY(0px);
+}
+.button--return:hover {
+  background: #333;
+  color: #f7f7f7;
+  font-weight: 400;
+  transform: translateY(-6px);
+  box-shadow: 0px 6px 6px #777;
+}
+.button--return:active {
+  transform: translateY(0px);
+}
+
+.button--item:hover {
+  font-weight: 500;
+  transform: translateY(-3px);
+  box-shadow: 0px 6px 6px #777;
+}
+.button--item:active {
+  transform: translateY(0px);
+}
+
+select {
+  padding: 1.5rem;
+}
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2.5rem;
+}
+
+.text-input {
+  padding: 1.5rem;
+}
+.bookmark-list-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 3rem;
+  height: 5rem;
+  background: #ede1e1;
+  border: 1px solid #777;
+  border-bottom: none;
+}
+
+.js-item-element {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #777;
+  padding: 2rem;
+  color: #333;
+  margin-bottom: 1rem;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+.js-item-element:hover {
+  background: #dcdcdc;
+}
+.list-title {
+  font-weight: bold;
+  text-transform: capitalize;
+  font-size: 2rem;
+}
+
+.list-content {
+  margin-top: 1rem;
+  text-transform: capitalize;
+}
+
+.list-content > a {
+  font-weight: bold;
+}
+
+.button--item {
+  background: #de1738;
+  margin-top: 1rem;
+  color: white;
+  padding: 1rem;
+  border: none;
+  font-weight: 300;
+  font-size: 1.6rem;
+  display: inline-block;
+  text-decoration: none;
+  line-height: 1;
+  cursor: pointer;
+  transition: all 0.2s ease-in;
+}
+.button--return {
+  background: #ede1e1;
+  color: #333;
+  margin-top: 1.5rem;
+}
+
+@media only screen and (min-width: 768px) {
+  .content-container {
+    max-width: 114rem;
+    margin: 0 auto;
+    padding: 0 2.5rem;
+  }
+
+  .button,
+  select,
+  .button--return {
+    width: 40%;
+  }
+  .buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .button--return {
+    margin-top: 0;
+  }
+  .header > h1 {
+    padding-left: 3rem;
+  }
 }
